hphp/hack/test/typecheck/array/disallow_varray_where_dict_like_array_is_required.php.exp
File "disallow_varray_where_dict_like_array_is_required.php", line 4, characters 10-26:
Invalid return type (Typing[4110])
File "disallow_varray_where_dict_like_array_is_required.php", line 3, characters 24-29:
Expected string
File "disallow_varray_where_dict_like_array_is_required.php", line 4, characters 10-26:
But got int
File "disallow_varray_where_dict_like_array_is_required.php", line 4, characters 10-26:
This can only be indexed with integers
