hphp/hack/test/typecheck/array/disallow_varray_where_dict_like_array_is_required.php
<?hh

function test(): darray<string, string> {
  return varray["tingley"];
}
